syntax = "proto3";

package images;

option go_package = "github.com/potacloud/pota/api/images/v1";
import "google/protobuf/timestamp.proto";

message Image {
    string id = 1;
    string name = 2;
    uint32 size = 3;
    string path = 4;

    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CreateImageRequest {
    string name = 1;
    string url = 2;
}

message CreateImageResponse {
    string message = 1;
    Image image = 2;
}

message ListImageRequest {}

message ListImageResponse {
    string message = 1;
    repeated Image image = 2;
}

message DetailImageRequest {
    string id = 1;
}

message DetailImageResponse {
    string message = 1;
    Image image = 2;
}

message UpdateImageRequest {
    string id = 1;
    string name = 2;
}

message UpdateImageResponse {
    string message = 1;
}

message DeleteImageRequest {
    string id = 1;
}

message DeleteImageResponse {
    string message = 1;
}


service Images {
    rpc CreateImage(CreateImageRequest) returns (CreateImageResponse) {};
    rpc ListImage(ListImageRequest) returns (ListImageResponse) {};
    rpc DetailImage(DetailImageRequest) returns (DetailImageResponse) {};
    rpc UpdateImage(UpdateImageRequest) returns (UpdateImageResponse) {};
    rpc DeleteImage(DeleteImageRequest) returns (DeleteImageResponse) {};
}